--- a/spring-boot-bean-dozer/pom.xml
+++ b/spring-boot-bean-dozer/pom.xml
@@ -13,7 +13,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-boot-bean-mapstruct</artifactId>
+    <artifactId>spring-boot-bean-dozer</artifactId>
     <packaging>jar</packaging>
 
     <parent>
