--- a/spring-boot-json-fastjson/pom.xml
+++ b/spring-boot-json-fastjson/pom.xml
@@ -13,7 +13,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-boot-json-jackson</artifactId>
+    <artifactId>spring-boot-json-fastjson</artifactId>
     <packaging>jar</packaging>
 
     <parent>
@@ -23,10 +23,11 @@
     </parent>
 
     <dependencies>
-        <!-- jackson -->
+        <!-- fastjson -->
         <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-json-org</artifactId>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>${fastjson.version}</version>
         </dependency>
     </dependencies>
 
