--- a/spring-boot-pay-wxpay/pom.xml
+++ b/spring-boot-pay-wxpay/pom.xml
@@ -22,4 +22,13 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <!-- wxpay -->
+        <dependency>
+            <groupId>com.github.wxpay</groupId>
+            <artifactId>wxpay-sdk</artifactId>
+            <version>${wxpay.version}</version>
+        </dependency>
+    </dependencies>
+
 </project>
