--- a/spring-boot-logging-logback/pom.xml
+++ b/spring-boot-logging-logback/pom.xml
@@ -22,4 +22,18 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <!-- aliyun-sls -->
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+        </dependency>
+
+        <!-- aliyun-sls-logback -->
+        <dependency>
+            <groupId>com.aliyun.openservices</groupId>
+            <artifactId>aliyun-log-logback-appender</artifactId>
+        </dependency>
+    </dependencies>
+
 </project>
